# signalflow

./: AUDIT.md  CLASP-Protocol-v2.md  CLASP-Protocol-v3.md  CLASP-Protocol.md  CLASP-QuickRef.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  HARDENING-PLAN.md  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.md  SignalFlow-Protocol-v2.md  clasp-minimal.js
.github/workflows/: ci.yml  release.yml
.internal/: ACTUAL-ARCHITECTURE-MAP.md  ACTUAL-IMPLEMENTATION-STATUS.md  API-DOCUMENTATION-PLAN.md  ARCHITECTURE-FINDINGS-AND-RECOMMENDATIONS.md  ARCHITECTURE-PLAN.md  CAPABILITIES-REALITY.md  CLEAR-ARCHITECTURE-PROPOSAL.md  COMPACT-ENCODING-PLAN.md  COMPLETE-ARCHITECTURE-SUMMARY.md  COMPLETE-AUDIT-REPORT-2026-01-23.md  COMPONENT-CAPABILITIES-MAP.md  COMPREHENSIVE-P2P-AUDIT-2026-01-23.md  COMPREHENSIVE-STATUS-REPORT.md  COMPREHENSIVE-TEST-AUDIT-2026-01-23.md  DEEP-AUDIT-REPORT.md  DEEP-UI-ARCHITECTURE-ANALYSIS.md  DEFINITIVE-IMPLEMENTATION-STATUS.md  DESKTOP-APP-ANALYSIS.md  DESKTOP-APP-ARCHITECTURE.md  DESKTOP-APP-IMPROVEMENTS.md  DOCUMENTATION-CLEANUP-PLAN.md  FINAL-AUDIT-SUMMARY-2026-01-23.md  HANDOFF-2026-01-26-SESSION2.md  HANDOFF-GUIDE.md  HARDENING-PLAN.md  IMPLEMENTATION-ROADMAP.md  IMPLEMENTATION-TRACKING.md  MASTER-CONSOLIDATION-PLAN.md  P2P-CONNECTION-FIX-COMPLETE.md  P2P-CONNECTION-FIX-HANDOFF.md  P2P-FIX-SUMMARY-2026-01-23.md  P2P-TESTING-GAP.md  PERFORMANCE.md  PLAN-HANDOFF.md  PLANS-SUMMARY.md  PRODUCTION-READINESS-AUDIT.md  PRODUCTION-READINESS-IMPLEMENTATION-PLAN.md  PRODUCTION-READINESS-SUMMARY.md  PROTOCOL-ADAPTER-ROLES.md  QUICK-REFERENCE.md  (+9 more)
.internal/analysis/: 14-SECURITY-MODEL.md
apps/bridge/: package-lock.json  package.json  vitest.config.ts
apps/bridge/electron/: main.js  preload.js
apps/bridge/scripts/: build-rust.js  notarize.js
apps/bridge/src/: app.js  index.html
bindings/js/: package-lock.json  package.json
bindings/python/: README.md  pyproject.toml
bindings/python/tests/: test_client.py  test_types.py
clasp-e2e/: Cargo.toml  STRESS_TEST_REPORT.md
clasp-e2e/benches/: throughput.rs
clasp-e2e/docker/: README.md  docker-compose.chaos-test.yml  docker-compose.load-test.yml  load-generator.dockerfile  network-sim.dockerfile  router.dockerfile  simulate-network.sh
clasp-e2e/src/: lib.rs
clasp-e2e/src/compliance/: encoding.rs  handshake.rs  messages.rs  mod.rs  security.rs  state.rs  subscription.rs
crates/clasp-bridge/: Cargo.toml  README.md
crates/clasp-bridge/src/: artnet.rs  dmx.rs  error.rs  http.rs  lib.rs  mapping.rs  midi.rs  mqtt.rs  osc.rs  sacn.rs  socketio.rs  traits.rs  transform.rs  websocket.rs
crates/clasp-bridge/tests/: artnet_tests.rs  http_tests.rs  midi_tests.rs  mqtt_tests.rs  osc_tests.rs  osc_virtual_tests.rs  websocket_tests.rs
crates/clasp-cli/: Cargo.toml  README.md
crates/clasp-cli/src/: main.rs  server.rs  tokens.rs
crates/clasp-client/: Cargo.toml  README.md
crates/clasp-client/src/: builder.rs  client.rs  error.rs  lib.rs  p2p.rs
crates/clasp-client/tests/: client_tests.rs
crates/clasp-core/: Cargo.toml  README.md
crates/clasp-core/benches/: codec.rs
crates/clasp-core/src/: address.rs  codec.rs  error.rs  frame.rs  lib.rs  security.rs  state.rs  time.rs  timeline.rs  types.rs
crates/clasp-core/tests/: address_tests.rs  codec_tests.rs  error_tests.rs  frame_tests.rs  protocol_tests.rs  state_tests.rs  time_tests.rs
crates/clasp-discovery/: Cargo.toml  README.md
crates/clasp-discovery/src/: broadcast.rs  device.rs  error.rs  lib.rs  mdns.rs  rendezvous.rs
crates/clasp-discovery/tests/: discovery_tests.rs  rendezvous_tests.rs
crates/clasp-embedded/: Cargo.toml  README.md
crates/clasp-embedded/src/: lib.rs
crates/clasp-router/: Cargo.toml  README.md
crates/clasp-router/src/: error.rs  gesture.rs  lib.rs  router.rs  session.rs  state.rs  subscription.rs
crates/clasp-router/src/adapters/: mod.rs  mqtt_server.rs  osc_server.rs
crates/clasp-router/tests/: bundle_tests.rs  gesture_tests.rs  lock_tests.rs  router_tests.rs  session_tests.rs  subscription_tests.rs  timeline_tests.rs
crates/clasp-test-utils/src/: lib.rs
crates/clasp-transport/: Cargo.toml  README.md
crates/clasp-transport/src/: ble.rs  error.rs  lib.rs  quic.rs  serial.rs  tcp.rs  traits.rs  udp.rs  wasm_websocket.rs  webrtc.rs  websocket.rs
crates/clasp-transport/tests/: quic_tests.rs  transport_tests.rs  udp_tests.rs
crates/clasp-wasm/: Cargo.toml  README.md
crates/clasp-wasm/src/: lib.rs
crates/clasp-wasm/tests/: web.rs
deploy/relay/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
deploy/relay/digitalocean/: app.yaml
deploy/relay/src/: main.rs
docs/: architecture.md  index.md  testing-handoff.md
docs/api/common/: discovery.md
docs/appendix/: changelog.md
docs/getting-started/: README.md
docs/guides/: bridge-setup.md  desktop-app-servers.md  protocol-mapping.md
docs/guides/protocols/: mqtt-integration.md
docs/how-to/advanced/: custom-bridge.md  embed-router.md  performance-tuning.md
docs/how-to/connections/: add-osc.md  (+1 more)
docs/protocols/: README.md  mqtt.md  osc.md
docs/tutorials/: cross-language-chat.md
docs/use-cases/: software-integration.md
examples/: README.md
examples/js/: embedded-server.js
examples/python/: embedded_server.py
examples/rust/: embedded-server.rs
scripts/: check-regression.py
site/: index.html  package-lock.json  package.json
site/src/: App.vue  router.js  style.css
test-suite/: Cargo.toml  README.md
test-suite/benches/: throughput.rs
test-suite/src/: lib.rs  main.rs
test-suite/src/tests/: artnet.rs  clasp_to_clasp.rs  helpers.rs  load.rs  midi.rs  mod.rs  osc.rs  proof.rs  security.rs
tests/: run_bridge_tests.sh
tests/integration/: artnet_dmx_test.rs  midi_echo_test.rs  osc_echo_test.rs
tools/clasp-cli/: Cargo.toml
tools/clasp-cli/src/: main.rs
tools/clasp-router/: Cargo.toml
tools/clasp-router/src/: main.rs
tools/clasp-service/: Cargo.toml
tools/clasp-service/src/: main.rs
tools/clasp-service/tests/: service_tests.rs
tools/clasp-test/: Cargo.toml
tools/clasp-test/src/: main.rs
(+52 files in other folders)
