[workspace]
resolver = "2"
members = [
    "crates/clasp-core",
    "crates/clasp-transport",
    "crates/clasp-discovery",
    "crates/clasp-bridge",
    "crates/clasp-router",
    "crates/clasp-client",
    "crates/clasp-embedded",
    "crates/clasp-wasm",
    "crates/clasp-cli",
    "tools/clasp-service",
    "tools/clasp-router",
    "test-suite",
]

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumencanvas/clasp"
homepage = "https://clasp.to"
documentation = "https://docs.rs/clasp-core"
rust-version = "1.75"
authors = ["LumenCanvas"]
description = "Creative Low-Latency Application Streaming Protocol"
keywords = ["osc", "midi", "dmx", "artnet", "protocol"]
categories = ["multimedia", "network-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
quinn = "0.11"
socket2 = "0.5"

# Protocols
rosc = "0.10"
midir = "0.9"
artnet_protocol = "0.2"

# Discovery
mdns-sd = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4"] }
glob-match = "0.2"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "BinaryType", "CloseEvent", "ErrorEvent"] }

# Testing
criterion = "0.5"

# Internal crates
clasp-core = { version = "0.1", path = "crates/clasp-core" }
clasp-transport = { version = "0.1", path = "crates/clasp-transport" }
clasp-discovery = { version = "0.1", path = "crates/clasp-discovery" }
clasp-bridge = { version = "0.1", path = "crates/clasp-bridge" }
clasp-router = { version = "0.1", path = "crates/clasp-router" }
clasp-client = { version = "0.1", path = "crates/clasp-client" }
clasp-embedded = { version = "0.1", path = "crates/clasp-embedded" }
clasp-cli = { version = "0.1", path = "crates/clasp-cli" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
