[package]
name = "clasp-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol bridges for CLASP (OSC, MIDI, Art-Net, DMX)"

[features]
default = ["osc", "midi", "artnet", "dmx"]
osc = ["rosc"]
midi = ["midir"]
artnet = ["artnet_protocol"]
sacn = []
dmx = []

[dependencies]
clasp-core = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Protocols
rosc = { workspace = true, optional = true }
midir = { workspace = true, optional = true }
artnet_protocol = { workspace = true, optional = true }

# Utils
bytes = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
