[package]
name = "clasp-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Protocol bridges for CLASP (OSC, MIDI, Art-Net, DMX, MQTT, WebSocket, HTTP)"
readme = "README.md"

[features]
default = ["osc", "midi", "artnet", "dmx", "mqtt", "websocket", "http"]
osc = ["rosc"]
midi = ["midir"]
artnet = ["artnet_protocol"]
sacn = []
dmx = []
mqtt = ["rumqttc"]
websocket = ["tokio-tungstenite"]
socketio = ["rust_socketio"]
http = ["axum", "tower", "tower-http", "reqwest"]

[dependencies]
clasp-core = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Protocols - Legacy
rosc = { workspace = true, optional = true }
midir = { workspace = true, optional = true }
artnet_protocol = { workspace = true, optional = true }

# Protocols - Modern
rumqttc = { version = "0.24", optional = true }
tokio-tungstenite = { workspace = true, optional = true }
rust_socketio = { version = "0.6", optional = true, default-features = false, features = ["async"] }

# HTTP Server
axum = { version = "0.7", optional = true, features = ["json", "macros"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors", "trace"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }

# Utils
bytes = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

# Expression evaluation
evalexpr = "11.3"

# JSON path
jsonpath_lib = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
