[package]
name = "clasp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for CLASP protocol servers and bridges"
readme = "README.md"

[[bin]]
name = "clasp"
path = "src/main.rs"

[dependencies]
clasp-core = { workspace = true }
clasp-bridge = { workspace = true, features = ["osc", "midi", "artnet", "mqtt", "websocket", "http"] }
clasp-transport = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"

# Async
tokio = { workspace = true, features = ["full", "signal"] }
futures = { workspace = true }

# Config
toml = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = { workspace = true }

# Utils
ctrlc = "3.4"
dirs = "5.0"
