[package]
name = "clasp-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Device discovery for CLASP (mDNS, UDP broadcast)"
readme = "README.md"

[features]
default = ["mdns", "broadcast"]
mdns = ["mdns-sd"]
broadcast = []
rendezvous = ["axum", "tower-http", "reqwest", "dashmap"]

[dependencies]
clasp-core = { workspace = true }
clasp-transport = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Discovery
mdns-sd = { workspace = true, optional = true }

# Rendezvous server (HTTP REST API)
axum = { version = "0.7", optional = true, features = ["json"] }
tower-http = { version = "0.5", optional = true, features = ["cors", "trace"] }
reqwest = { version = "0.12", optional = true, features = ["json"] }
dashmap = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hostname = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }