[package]
name = "clasp-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLASP message router and server"
readme = "README.md"

[features]
default = ["websocket"]
# Full transport support - use for native deployments (Droplet, VPS)
full = ["websocket", "quic", "tcp"]
# WebSocket only - works on all platforms including DO App Platform
websocket = ["clasp-transport/websocket"]
# QUIC requires UDP - works on Droplets/VPS, NOT on DO App Platform
# DO App Platform only supports HTTP/HTTPS/TCP, not raw UDP
quic = ["clasp-transport/quic"]
# Raw TCP - simple fallback, works everywhere
tcp = []
# WASM build - client-only, uses web-sys WebSocket
wasm = ["clasp-transport/wasm", "wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
clasp-core = { workspace = true }
clasp-transport = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }

# WASM (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
