[package]
name = "clasp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transport layer implementations for CLASP"

[features]
default = ["websocket", "udp"]
websocket = ["tokio-tungstenite", "futures-util"]
udp = []
quic = ["quinn"]
serial = ["tokio-serial"]

[dependencies]
clasp-core = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
bytes = { workspace = true }
parking_lot = { workspace = true }

# WebSocket (optional)
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }

# QUIC (optional)
quinn = { workspace = true, optional = true }

# Serial (optional)
tokio-serial = { version = "5.4", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
