[package]
name = "clasp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport layer implementations for CLASP"
readme = "README.md"

[features]
default = ["websocket", "udp", "quic"]
full = ["websocket", "udp", "quic", "serial", "ble", "webrtc"]
websocket = ["tokio-tungstenite", "futures-util", "url"]
udp = []
quic = ["quinn", "rustls"]
serial = ["tokio-serial"]
ble = ["btleplug", "uuid"]
webrtc = ["webrtc-rs", "serde_json"]

[dependencies]
clasp-core = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
bytes = { workspace = true }
parking_lot = { workspace = true }

# WebSocket (optional)
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }

# QUIC (optional)
quinn = { workspace = true, optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }

# Serial (optional)
tokio-serial = { version = "5.4", optional = true }

# BLE (optional)
btleplug = { version = "0.11", optional = true }
uuid = { version = "1.0", optional = true }

# WebRTC (optional)
webrtc-rs = { package = "webrtc", version = "0.10", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
