[package]
name = "clasp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport layer implementations for CLASP"
readme = "README.md"

[features]
default = ["websocket", "tcp", "udp", "quic"]
full = ["websocket", "tcp", "udp", "quic", "serial", "ble", "webrtc"]

# WebSocket - native uses tokio-tungstenite, WASM uses web-sys
websocket = ["tokio-tungstenite", "futures-util", "url"]
wasm-websocket = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]

# Native-only transports (not available in WASM)
tcp = ["socket2"]
udp = []
quic = ["quinn", "rustls", "rustls-native-certs"]
serial = ["tokio-serial"]
ble = ["btleplug", "uuid"]
webrtc = ["webrtc-rs", "serde_json"]

# WASM build - only includes wasm-compatible transports
wasm = ["wasm-websocket"]

[dependencies]
clasp-core = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
bytes = { workspace = true }
parking_lot = { workspace = true }

# WebSocket (optional)
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }

# QUIC (optional)
quinn = { workspace = true, optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rustls-native-certs = { version = "0.8", optional = true }

# Serial (optional)
tokio-serial = { version = "5.4", optional = true }

# BLE (optional)
btleplug = { version = "0.11", optional = true }
uuid = { version = "1.0", optional = true }

# WebRTC (optional)
webrtc-rs = { package = "webrtc", version = "0.10", optional = true }
serde_json = { version = "1.0", optional = true }

# TCP keepalive (optional)
socket2 = { version = "0.5", optional = true, features = ["all"] }

# WASM (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", optional = true, features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "Blob",
    "FileReader",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
