[package]
name = "clasp-router-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLASP router server"

[[bin]]
name = "clasp-router"
path = "src/main.rs"

[dependencies]
clasp-core.workspace = true
clasp-router.workspace = true
clasp-discovery.workspace = true
clasp-bridge = { workspace = true, optional = true }

tokio.workspace = true
futures.workspace = true
clap = { version = "4.4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
toml = "0.8"

[features]
default = ["bridges"]
bridges = ["clasp-bridge"]
