[package]
name = "clasp-router-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLASP router server"

[[bin]]
name = "clasp-router"
path = "src/main.rs"

[dependencies]
clasp-core.workspace = true
clasp-router.workspace = true
clasp-transport.workspace = true
clasp-discovery.workspace = true
clasp-bridge = { workspace = true, optional = true }

tokio.workspace = true
futures.workspace = true
clap = { version = "4.4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
toml = "0.8"
rcgen = "0.13"

[features]
default = ["bridges", "websocket"]
bridges = ["clasp-bridge"]
# WebSocket - works everywhere including DO App Platform
websocket = ["clasp-router/websocket"]
# QUIC - high-performance, requires UDP (NOT supported on DO App Platform)
quic = ["clasp-router/quic", "clasp-transport/quic"]
# Full transport support - for VPS/Droplet deployments
full = ["websocket", "quic"]
