[package]
name = "clasp-service"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLASP Bridge Service for Electron IPC"

[[bin]]
name = "clasp-service"
path = "src/main.rs"

[dependencies]
clasp-core = { workspace = true }
clasp-bridge = { workspace = true }

# Async
tokio = { workspace = true, features = ["full", "io-std"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
uuid = { workspace = true }
