[package]
name = "clasp-service"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLASP Bridge Service for Electron IPC"

[[bin]]
name = "clasp-service"
path = "src/main.rs"

[features]
default = ["osc", "midi", "artnet", "mqtt", "websocket", "http"]
osc = ["clasp-bridge/osc"]
midi = ["clasp-bridge/midi"]
artnet = ["clasp-bridge/artnet"]
dmx = ["clasp-bridge/dmx"]
mqtt = ["clasp-bridge/mqtt"]
websocket = ["clasp-bridge/websocket"]
socketio = ["clasp-bridge/socketio"]
http = ["clasp-bridge/http"]
full = ["osc", "midi", "artnet", "dmx", "mqtt", "websocket", "socketio", "http"]

[dependencies]
clasp-core = { workspace = true }
clasp-bridge = { workspace = true, default-features = false }

# Async
tokio = { workspace = true, features = ["full", "io-std"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
uuid = { workspace = true }
