[package]
name = "clasp-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLASP test utilities and integration tests"

[[bin]]
name = "clasp-test"
path = "src/main.rs"

[dependencies]
clasp-core.workspace = true
clasp-client.workspace = true
clasp-router.workspace = true

tokio.workspace = true
futures.workspace = true
clap = { version = "4.4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rand = "0.8"
